@@ -1,11 +1,15 @@
 package dev.vinpol.nebula.dragonship.bigbrain;
 
 import org.dizitart.no2.Nitrite;
+import org.dizitart.no2.filters.Filter;
 import org.dizitart.no2.repository.EntityDecorator;
 import org.dizitart.no2.repository.EntityId;
 import org.dizitart.no2.repository.EntityIndex;
 import org.dizitart.no2.repository.ObjectRepository;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -13,12 +17,15 @@ import java.util.function.Consumer;
 
 final class NitriteApiCache<K, R> {
 
+    private final Logger logger;
+
     private final Nitrite db;
     private final ObjectRepository<R> collection;
 
     NitriteApiCache(Nitrite db, Class<R> clazz, String idField) {
         this.db = db;
         this.collection = db.getRepository(new CacheEntityDecorator(clazz, idField));
+        logger = LoggerFactory.getLogger("NitriteApiCache<" + clazz.getSimpleName() + ">");
     }
 
     R getById(K key) {
@@ -53,6 +60,19 @@ final class NitriteApiCache<K, R> {
         }
     }
 
+    public void deleteIfExistsByKey(K key) {
+        R record = collection.getById(key);
+        logger.debug("deleteIfExistsByKey record: {}", record);
+
+        if (record != null) {
+            collection.remove(record);
+        }
+    }
+
+    public void clear() {
+        collection.remove(Filter.ALL);
+    }
+
     private final class CacheEntityDecorator implements EntityDecorator<R> {
         private final Class<R> clazz;
         private final String idField;
@@ -74,7 +94,7 @@ final class NitriteApiCache<K, R> {
 
         @Override
         public List<EntityIndex> getIndexFields() {
-            return List.of();
+            return Collections.emptyList();
         }
     }
 }
